se cambio el footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
   </main>
   <footer>
-    <!-- place footer here -->
+    <h2>
+      aqui se creo el footer
+    </h2>
   </footer>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
